# mp4-atom

./: .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  justfile
.github/workflows/: pr.yml
examples/: info.rs
fuzz/: Cargo.toml
fuzz/src/: decode.rs  read.rs
src/: any.rs  atom.rs  atom_ext.rs  buf.rs  coding.rs  emsg.rs  error.rs  free.rs  ftyp.rs  header.rs  io.rs  iso639.rs  lib.rs  main.rs  mdat.rs  misc.rs  prft.rs  reader.rs  sidx.rs  styp.rs  test.rs  traits.rs  types.rs  unknown.rs
src/meta/: idat.rs  iinf.rs  iloc.rs  iprp.rs  iref.rs  mod.rs  pitm.rs
src/meta/ilst/: cprt.rs  data.rs  desc.rs  mod.rs  tool.rs
src/meta/properties/: auxc.rs  clap.rs  imir.rs  irot.rs  iscl.rs  ispe.rs  mod.rs  pixi.rs  rref.rs
src/mfra/: mfro.rs  mod.rs  tfra.rs
src/moof/: mfhd.rs  mod.rs
src/moof/traf/: mod.rs  tfdt.rs  tfhd.rs  trun.rs
src/moov/: ainf.rs  mod.rs  mvhd.rs
src/moov/mvex/: mehd.rs  mod.rs  trex.rs
src/moov/trak/: mod.rs  senc.rs  tkhd.rs  tref.rs
src/moov/trak/edts/: elst.rs  mod.rs
src/moov/trak/mdia/: hdlr.rs  mdhd.rs  mod.rs
src/moov/trak/mdia/minf/: hmhd.rs  mod.rs  nmhd.rs  smhd.rs  sthd.rs  (+1 more)
src/moov/udta/: cprt.rs  kind.rs  mod.rs  rtng.rs  skip.rs
src/moov/udta/meta/: mod.rs
src/test/: av1.rs  avcc_ext.rs  bbb.rs  esds.rs  fault_tolerant.rs  flac.rs  fmp4.rs  h264.rs  heif.rs  hevc.rs  image.avif  image.heif  image.rs  libavif_anim.rs  libavif_anim_q10.avif  mod.rs  mpeg_file_format_conformance.rs  uncompressed.rs  vp09.rs  vp9.rs
src/tokio/: any.rs  atom.rs  header.rs  mod.rs
tests/: stsd.rs
(+71 files in other folders)
